# sunray

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  shell.nix
.claude/: settings.local.json
assets/: shader.vert
docs/: GPU_PERFORMANCE_REPORT.md  NVIDIA_DRIVER_CRASH_REPORT.md  PERFORMANCE_ANALYSIS.md  bevy_integration.md  restructure.md
examples/: .gitignore  log4rs.yaml  ray_tracing_in_one_weekend.rs
examples/assets/: ReflectionRoom.glb  Room.glb
examples/bevy_app/: main.rs
examples/hello-triangle-png/: main.rs
examples/hello-triangle-window/: main.rs  surface.rs  swapchain.rs
examples/hello-triangle-window/utils/: mod.rs
examples/png/: main.rs
examples/png-example/: main.rs
examples/window/: main.rs  surface.rs  swapchain.rs
examples/window-example/: main.rs  swapchain.rs
examples/window/utils/: mod.rs
shaders/: any_hit.slang  closest_hit.glsl  closest_hit.slang  common.glsl  denoise.glsl  denoise.slang  egui.slang  frag.glsl  postprocess.glsl  postprocess.slang  ray_gen.glsl  ray_gen_final.slang  ray_gen_ris.slang  ray_miss.glsl  ray_miss.slang  rt_types.slang  rt_utils.slang  temporal_accumulation.glsl  temporal_accumulation.slang  utils.glsl  vert.glsl
src/: camera.rs  demo_runner.rs  error.rs  lib.rs  main.rs  profiling.rs  scene.rs  triangle_demo.rs  utils.rs  vec3.rs  vkal.rs
src/app/: mod.rs
src/app/render_context/: mod.rs
src/bevy_integration/: asset.rs  camera.rs  egui_paint.rs  egui_support.rs  gltf_scene.rs  instance.rs  mod.rs  plugin.rs  state.rs  surface.rs  swapchain.rs  systems.rs
src/finello_pathtracing_pipeline/: lib.rs
src/render_graph/: error.rs  graph.rs  graph_debug.rs  graph_error.rs  mod.rs  pass_builder.rs  pass_factories.rs  resource.rs  transient_resources.rs
src/shader_compiler/: compiler.rs  mod.rs
src/utils/: mod.rs
src/vkal/: resources.rs  vulkan_core.rs
src/vkal/resources/: logical_device.rs  owned_instance.rs  physical_device.rs  swapchain.rs
src/vkal/resources/owned_instance/: debug_utils.rs
src/vkal/vulkan_core/: pipeline.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs
src/vkal/vulkan_core/buffer/: mapped_memory.rs  mod.rs
src/vkal/vulkan_core/cmd_pool/: cmd_buffer.rs  mod.rs
src/vkal/vulkan_core/device/: physical_device.rs  queue.rs
src/vkal/vulkan_core/instance/: debug_utils.rs  mod.rs
src/vkal/vulkan_core/logical_device/: mod.rs  physical_device.rs  queue.rs
src/vulkan_abstraction/: blas.rs  camera.rs  compute_pipeline.rs  descriptor_set.rs  diagnostics.rs  fence.rs  gltf.rs  graphics_pipeline.rs  image.rs  mod.rs  queue.rs  ray_tracing_pipeline.rs  resource_manager.rs  scene.rs  shader_binding_table.rs  shader_data_buffers.rs  syncronization.rs  tlas.rs
src/vulkan_abstraction/acceleration_structure/: accel.rs  blas.rs  compaction.rs  mod.rs  tlas.rs
src/vulkan_abstraction/buffer/: arena_core.rs  arena_gpu.rs  arena_keyed.rs  gpu_only_buffer.rs  index_buffer.rs  instance_buffer.rs  mapped_memory.rs  mod.rs  staging_buffer.rs  uniform_buffer.rs  vertex_buffer.rs
src/vulkan_abstraction/cmd_pool/: cmd_buffer.rs  mod.rs
src/vulkan_abstraction/core/: device.rs  instance.rs  mod.rs  queue.rs  queues.rs  surface.rs  swapchain.rs
src/vulkan_abstraction/descriptor_heap/: error.rs  heap.rs  mod.rs  slot.rs
src/vulkan_abstraction/descriptor_sets/: denoise_descriptor_set.rs  postprocess_descriptor_set.rs  raytracing_descriptor_set.rs  temporal_accumulation_descriptor_set.rs
src/vulkan_abstraction/gltf/: emissive_triangle.rs  image.rs  material.rs  mesh.rs  mod.rs  model.rs  node.rs  primitive.rs  texture.rs  vertex.rs
src/vulkan_abstraction/image/: mod.rs  sampler.rs  swapchain.rs  texture.rs
src/vulkan_abstraction/pipelines/: compute_pipeline.rs  graphics_pipeline.rs  mod.rs  ray_tracing_pipeline.rs  shader_binding_table.rs
src/vulkan_abstraction/resources/: entity.rs  material.rs  matrices_buffer_contents.rs  mod.rs  reservoir.rs
src/vulkan_abstraction/scene/: mesh.rs  mod.rs  model.rs  node.rs
src/vulkan_abstraction/synchronization/: access_type.rs  fence.rs  mod.rs  semaphore.rs
