[package]
name = "sunray"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "hardware ray-tracing library"
repository = "https://github.com/Kalsifer-742/sunray.git"
readme = "README.md"
keywords = ["graphics", "rendering", "gamedev"]
categories = ["multimedia", "graphics", "hardware-support", "game-development"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
shaderc = "0.9"
nalgebra = "0.34"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual"]}
log = { version = "0.4.28", features = ["release_max_level_warn"] }
gpu-allocator = "0.28.0"

[dev-dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] }
log4rs = "1.4.0" #logging for examples
image = "0.25.8" #png example

[[example]]
name = "png"

[[example]]
name = "window"
