[package]
name = "sunray"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "hardware ray-tracing library"
repository = "https://github.com/Kalsifer-742/sunray.git"
readme = "README.md"
keywords = ["graphics", "rendering", "gamedev"]
categories = ["multimedia", "graphics", "hardware-support", "game-development"]
exclude = ["examples/assets/Lantern.glb", "examples/.gitignore", ".gitignore"]

[dependencies]
ash = { git = "https://github.com/ash-rs/ash.git" , features = ["linked"] }
nalgebra = "0.34"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual", "KHR_materials_emissive_strength", "KHR_materials_transmission", "KHR_materials_ior"] }
log = { version = "0.4.28", features = ["release_max_level_warn"] }
gpu-allocator = {  git = "https://github.com/MatteoBallardin/gpu-allocator.git" }
bytemuck = "1.24.0"
image = "0.25.8"
parking_lot = "0.12.5"
vk-sync-fork = {git = "https://github.com/MatteoBallardin/vk-sync-rs.git" , branch = "1.4"}
rand = "0.10.1"
slotmap = "1.1.1"
rspirv-reflect = "0.9.0"
derive_builder = "0.20.2"
enum-as-inner = "0.7.0"
num = "0.4.3"
shader-slang = "0.1.0"
shader-slang-sys = "0.1.0"
# Optional: enables the NVIDIA Aftermath user-space crash-dump handler.
# Off by default — pulls in the Aftermath SDK runtime (the build script downloads
# it via sysreq) which isn't needed for normal use. Even without the feature
# enabled, DiagnosticTool::NvidiaAftermath still wires up the Vulkan-side
# device-diagnostics-config + checkpoint extensions, which alone already help
# localize a faulting dispatch.
aftermath-rs = { git = "https://github.com/MatteoBallardin/aftermath-rs.git", optional = true }
petgraph = "0.8.3"
bimap = "0.6.3"
#na = "0.32.2"

[features]
default = []
nvidia-aftermath = ["dep:aftermath-rs"]


[build-dependencies]
shaderc = "0.10.1"
shader-slang = "0.1.0"
shader-slang-sys = "0.1.0"

[dev-dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] } #window example
log4rs = "1.4.0" #logging for examples
image = "0.25.8" #png example

[[example]]
name = "png"

[[example]]
name = "window"
